# edge_computing

./: README.md  local.properties
Cyclope/: settings.gradle.kts
Cyclope/app/: build.gradle.kts
Cyclope/app/src/androidTest/java/com/example/cyclope/: ExampleInstrumentedTest.java
Cyclope/app/src/main/: AndroidManifest.xml
Cyclope/app/src/main/cpp/: CMakeLists.txt  CV_Manager.cpp  CV_Manager.h  Image_Reader.cpp  Image_Reader.h  Native_Camera.cpp  Native_Camera.h  Util.h  native-lib.cpp
Cyclope/app/src/main/cpp/opencv_stub/opencv2/: core.hpp  imgproc.hpp
Cyclope/app/src/main/java/com/example/cyclope/: CaptationGPS.java  CaptationNotification.java  CaptationSon.java  CaptationVideo.java  CyclopeService.java  MainActivity.java  ServerDiscovery.java  SignalingClient.java  WebRtcClient.java
Cyclope/app/src/main/res/layout/: activity_main.xml
Cyclope/app/src/main/res/values/: strings.xml  themes.xml
Cyclope/app/src/main/res/values-night/: themes.xml
Cyclope/app/src/test/java/com/example/cyclope/: ExampleUnitTest.java
Cyclope/gradle/: libs.versions.toml
Cyclope/gradle/wrapper/: gradle-wrapper.properties
server/: package-lock.json  package.json  server.js
server/public/: index.html
